updated to java 8